# gisconf2015

./: .gitignore  CMakeLists.txt  README.md  create_vrt.cpp  main.cpp  main_v1.cpp  main_v2.cpp  main_v3.cpp
data/: DS1007-1056DF103.vrt
